fix(challops): fix chall-hashes job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Create folder challenge hashes
         id: challenge-hashes
         run: |
-          if [ -f .cache/hashes ]; then
+          if [ -d .cache ] && [ -f .cache/hashes ]; then
             rm -f .cache/hashes
           fi
           mkdir -p .cache
