fix(challops): fix chall-sync job

--- a/.github/workflows/ctfd.yml
+++ b/.github/workflows/ctfd.yml
@@ -11,7 +11,7 @@ jobs:
       
       - name: Create .ctf/config file
         run: |
-          mkdir -p .ctf/config
+          mkdir -p .ctf
           echo "${{ secrets.CTF_CLI_CONFIG }}" > .ctf/config
       
       - name: Install ctfcli
