--- a/crypto/caesar-salad/challenge.yml
+++ b/crypto/caesar-salad/challenge.yml
@@ -9,7 +9,7 @@ description: |
   was presented with a message that proved completely unintelligible to me.
 
 value: 500
-type: dynamic_docker
+type: dynamic
 extra:
   initial: 500
   minimum: 100
