--- a/web/chall_1/challenge.yml
+++ b/web/chall_1/challenge.yml
@@ -11,7 +11,7 @@ extra:
   initial: 500
   minimum: 100
   decay: 50
-  redirect_type: direct
+  redirect_type: http
   compose_stack: !filecontents docker-compose.yml
 
 flags:
@@ -19,9 +19,7 @@ flags:
 
 tags:
   - web
-
-files:
-  - public/portal-gun.tar.gz
+  - easy
 
 state: visible
 version: "0.1"
