--- a/web/taskmasters-turmoil/docker-compose.yml
+++ b/web/taskmasters-turmoil/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
 
   webapp:
+    image: ghcr.io/cybermouflons/ccsc2023/taskmasters-turnmoil:latest
     build: ./setup/webapp/
     depends_on:
       - db
