add forensics challenge 'Unveiling the Quacks'

--- a/forensics/unveiling-the-quacks/challenge.yml
+++ b/forensics/unveiling-the-quacks/challenge.yml
@@ -1,6 +1,6 @@
 name: "Unveiling the Quacks"
 author: "s1kk1s"
-category: beginner
+category: forensics
 
 description: |
   Lucas and John, two  members of the resistance, have successfully retrieved a crucial pcap file through a daring covert surveillance operation. 
