--- a/reverse/electroverse/challenge.yml
+++ b/reverse/electroverse/challenge.yml
@@ -1,6 +1,6 @@
 name: "Electroverse: Decrypting the Digital Pulse"
 author: "s1kk1s"
-category: medium
+category: reverse
 
 description: |
  Lucas, has recently discovered that one of his trusted notetaking applications 
