chore: make challenges visible

--- a/web/stop-the-robots/setup/Dockerfile
+++ b/web/stop-the-robots/setup/Dockerfile
@@ -2,4 +2,5 @@ FROM php:7.4-apache
 
 COPY app /var/www/html/
 
+RUN sed -i "s/Listen 80/Listen 8080/" /etc/apache2/ports.conf 
 RUN chown -R www-data:www-data /var/www/html/
