--- a/web/cookie-conquest/setup/Dockerfile
+++ b/web/cookie-conquest/setup/Dockerfile
@@ -1,8 +1,3 @@
-FROM php:8.1-apache
-
-RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini" && \
-    sed -i 's/^log_errors = On$/log_errors = Off/' "$PHP_INI_DIR/php.ini"
+FROM shinsenter/php:7.4-fpm-nginx
 
 COPY app /var/www/html/
-
-CMD ["/bin/sh", "-c", "php -S 0.0.0.0:1337 2> /dev/null"]
