--- a/pwn/babyrop/challenge.yml
+++ b/pwn/babyrop/challenge.yml
@@ -3,7 +3,7 @@ author: "s3nn"
 category: pwn
 
 description: |
-  Defences have been hardened, but the AI has made one fatal mistake. Now's your chance to destroy all its defences!
+  Defences have been hardened, but the AI has made one fatal mistake. Now's your chance, help the Pulse destroy all its defences!
 
 value: 500
 type: dynamic_docker
@@ -19,7 +19,7 @@ flags:
 
 tags:
   - pwn
-  - rop
+  - easy
 
 files:
   - "public/babyrop"
