--- a/web/cyber-sleuths-web-security-havoc/setup/Dockerfile
+++ b/web/cyber-sleuths-web-security-havoc/setup/Dockerfile
@@ -6,10 +6,14 @@ RUN apt-get update && apt-get install chromium -y
 
 # RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout ./server.key -out /server.key
 
-COPY package*.json ./
-RUN npm install
+
+# COPY package*.json ./
 
 COPY . .
+
+RUN npm install
+
+
 
 # RUN openssl rand -base64 48 > passphrase.txt
 # RUN openssl genrsa -aes128 -passout file:passphrase.txt -out server.key 2048
