--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,6 +94,25 @@ jobs:
           for challenge_dir in "${challenge_dirs[@]}"; do
             docker compose -f $challenge_dir/docker-compose.yml push
           done
+  
+      - name: Clear cache
+        uses: actions/github-script@v6
+        with:
+          script: |
+            console.log("About to clear")
+            const caches = await github.rest.actions.getActionsCacheList({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+            })
+            for (const cache of caches.data.actions_caches) {
+              console.log(cache)
+              github.rest.actions.deleteActionsCacheById({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                cache_id: cache.id,
+              })
+            }
+            console.log("Clear completed")
       
       - name: Save folder challenge hashes
         id: challenge-hashes-save
