web(mission-serialization): fix description

--- a/web/mission-serializaition/challenge.yml
+++ b/web/mission-serializaition/challenge.yml
@@ -3,7 +3,7 @@ author: "s3nn + Koupepi"
 category: web
 
 description: |
-  Mary needs to undertake a solo mission to help the Pulse weaken the AI's defences. 
+  Ava needs to undertake a solo mission to help the Pulse weaken the AI's defences. 
 
 value: 500
 type: dynamic_docker
