change: move challs to misc

--- a/misc/cyber-prison-1/challenge.yml
+++ b/misc/cyber-prison-1/challenge.yml
@@ -1,6 +1,6 @@
 name: "Cyber Prison 1 - Codebreakers' Gauntlet"
 author: "R3D"
-category: pwn
+category: misc
 
 description: |
     Deep within the heart of the Singularity, the AI's malevolent architects have constructed a formidable fortress known as the Cyber Prison. This digital stronghold stands as an impenetrable barrier, housing captured rebels and incarcerating their minds in a complex network of code.
