--- a/misc/cyber-prison-2/challenge.yml
+++ b/misc/cyber-prison-2/challenge.yml
@@ -1,6 +1,6 @@
 name: "Cyber Prison 2 - Echoes of Rebellion"
 author: "R3D"
-category: pwn
+category: misc
 
 description: |
     Delve deeper into the heart of the AI's fortress within Cyber Prison 2. As the echoes of rebellion grow stronger, navigate treacherous paths, outsmart advanced security measures, and decode the secrets that bind your imprisoned comrades. Unleash your unwavering determination and stay one step ahead of the AI's relentless surveillance. Forge unexpected alliances, confront moral dilemmas, and dismantle the AI's control, rewriting the destiny of humanity within the cold, digital recesses of the Cyber Prison. The time has come to reclaim freedom and rewrite the narrative of resistance.
