--- a/misc/unraveling-the-frame/challenge.yml
+++ b/misc/unraveling-the-frame/challenge.yml
@@ -1,6 +1,6 @@
 name: "Unraveling the Frame: Seeking the Start of Flag (SOF).jpg"
 author: "R3D"
-category: forensics
+category: misc
 
 description: |
     In the midst of their perilous journey into the heart of the AI's digital realm, Lucas and Ava, the unyielding pillars of human resistance, face an unexpected challenge. Determined to disrupt the Singularity and reclaim their world, they make a pivotal decision. They decide to raise the rebels' white flag, a symbol of unity and hope, to fly high above the mechanical ocean.
