--- a/misc/cyber-prison-1/docker-compose.yml
+++ b/misc/cyber-prison-1/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   challenge:
-    image: ghcr.io/cybermouflons/ccsc2023/Cyber_Prison_1:latest
+    image: ghcr.io/cybermouflons/ccsc2023/cyber-prison-1:latest
     restart: always
     ports:
       - 4689:4689
@@ -10,4 +10,4 @@ services:
       context: ./setup
       dockerfile: Dockerfile
       labels:
-        ctf.challenge.name: Cyber_Prison_1
+        ctf.challenge.name: cyber-prison-1
