--- a/misc/cyber-prison-2/docker-compose.yml
+++ b/misc/cyber-prison-2/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   challenge:
-    image: ghcr.io/cybermouflons/ccsc2023/Cyber_Prison_2:latest
+    image: ghcr.io/cybermouflons/ccsc2023/cyber-prison-2:latest
     restart: always
     ports:
       - 4690:4690
@@ -10,4 +10,4 @@ services:
       context: ./setup
       dockerfile: Dockerfile
       labels:
-        ctf.challenge.name: Cyber_Prison_2
+        ctf.challenge.name: cyber-prison-2
