--- a/reverse/control-it/challenge.yml
+++ b/reverse/control-it/challenge.yml
@@ -3,8 +3,8 @@ author: "icyDux"
 category: reverse
 
 description: |
-  As Lucas was walking down the burned neighboorhood of Nicosia, a robot-thug challenged him to gain the secret flag from the binary or he'll be in trouble! 
-  
+  As Lucas was walking down the burned neighbourhood of Nicosia, a robot-thug challenged him to gain the secret flag from the binary or he'll be in trouble!
+
   Help him to examine the binary
 
 value: 500
