--- a/reverse/shellhunting/challenge.yml
+++ b/reverse/shellhunting/challenge.yml
@@ -3,9 +3,9 @@ author: "icyDux"
 category: reverse
 
 description: |
-  One of the generals of the AI-sponsored goverment left his house unlocked while he was going to the beach. Ava spotted the powered on computer, and managed to intercept the traffic from an unknown application.
+ One of the generals of the AI-sponsored government left his house unlocked while he was going to the beach. Ava spotted the powered on computer, and managed to intercept the traffic from an unknown application.
 
-  Help her to understand the contnets of the communication
+  Help her to understand the contents of the communication
 
 value: 500
 type: dynamic
