--- a/pwn/restrictions-of-pickles/challenge.yml
+++ b/pwn/restrictions-of-pickles/challenge.yml
@@ -12,7 +12,7 @@ type: dynamic_docker
 extra:
   initial: 500
   minimum: 100
-  decay: 50
+  decay: 25
   redirect_type: direct
   compose_stack: !filecontents docker-compose.yml
 
@@ -21,6 +21,7 @@ flags:
 
 tags:
   - pwn
+  - medium
 
 files:
   - "public/ai_rop.py"
