--- a/web/cyber-sleuths-web-security-havoc/docker-compose.yml
+++ b/web/cyber-sleuths-web-security-havoc/docker-compose.yml
@@ -5,14 +5,17 @@ services:
     image: ghcr.io/cybermouflons/ccsc2023/cyber-sleuths-web-security-havoc:latest # Add in prod
     build: ./setup/
     ports:
+      # - 3000:3000
       - 3443:3443
     environment:
       host: localhost:3443
-      cssc_host: challenges.cybermouflons.com
+      ccsc_host: challenges.cybermouflons.com
       admin_username: admin
-      admin_password: this_is_a_really_long_password_loooooool_dont_guess_me_plzzz
-      flag: CCSC{hijacking_your_way_to_hell}
+      admin_password: th1s_is_4_re4lly_l0ng_password_l0o0o0oo0l_dont_guess_me_plzzz
     # volumes:              #
-    #   - ./setup:/app      # Remove in prod
-    #   - /app/node_modules #
+    #   - ./setup/views/index.html:/app/views/index.html      # Remove in prod
+    #   - ./setup/views/login.html:/app/views/login.html      # Remove in prod
+    #   - ./setup/views/register.html:/app/views/register.html      # Remove in prod
+    #   - ./setup/static/css/styles.css:/app/static/css/styles.css      # Remove in prod
+    # #   - /app/node_modules #
 
