--- a/misc/pyjail-disbelief/challenge.yml
+++ b/misc/pyjail-disbelief/challenge.yml
@@ -5,6 +5,8 @@ category: misc
 description: |
     Your task is to infiltrate a perplexing Python Jail (PyJail), a segment of the AI's network that sparked disbelief among our ranks. Using your Python prowess and out-of-the-box thinking, exploit the PyJail's weaknesses, bypass its restrictions, and retrieve valuable intel. Your skills will determine if this 'disbelief' is an AI riddle or a trap. Can you defy disbelief and conquer the PyJail? The Pulse counts on your success.
 
+    Note: The challenge runs on Python 3.10
+
 value: 500
 type: dynamic_docker
 extra:
