--- a/crypto/ciphered-protocol-assault/challenge.yml
+++ b/crypto/ciphered-protocol-assault/challenge.yml
@@ -3,7 +3,7 @@ author: rok0s
 category: crypto
 
 description: |
-    Infiltrating the AI-controlled territories with daring audacity, Ava had successfully gathered power traces for known plaintexts from devices encrypting vital AI communication. These devices, unknowingly, leaked invaluable information about the AI's encryption process. 
+    Infiltrating the AI-controlled territories with daring audacity, Ava had successfully gathered power traces for known plaintexts from devices encrypting vital AI communication using an implementation of AES (https://github.com/kokke/tiny-AES-c/blob/master/aes.c). These devices, unknowingly, leaked invaluable information about the AI's encryption process. 
     
     Can you use these traces to uncover the encryption key?
 
