--- a/web/zenon/setup/webapp/pyproject.toml
+++ b/web/zenon/setup/webapp/pyproject.toml
@@ -18,6 +18,7 @@ secweb = "^1.7.2"
 requests = "^2.31.0"
 cffi = "^1.15.1"
 pytest-playwright = "^0.3.3"
+fastapi-simple-cachecontrol = "^0.1.0"
 
 
 [build-system]
