add hint (crypto, little-shakalaka)

--- a/crypto/little-shakalaka/challenge.yml
+++ b/crypto/little-shakalaka/challenge.yml
@@ -19,6 +19,9 @@ extra:
 flags:
   - CCSC{m3rkle_d4mgard_construct1on_is_vulner4ble_t0_length_ext3nsion_sha3_is_n0t}
 
+hints:
+  - Ralph Merkle, Ivan Damgård
+
 tags:
   - crypto
   - medium/hard
