--- a/web/zenon/setup/webapp/Dockerfile
+++ b/web/zenon/setup/webapp/Dockerfile
@@ -1,7 +1,4 @@
-FROM mcr.microsoft.com/playwright:v1.35.0-jammy
-
-RUN apt update -y && \
-    apt install -y python3-pip
+FROM python:3.10-slim-buster
 
 WORKDIR /chall
 
@@ -9,10 +6,7 @@ COPY . .
 
 RUN pip install poetry
 
-RUN poetry install && \
-    poetry run playwright install chromium && \
-    poetry run playwright install-deps && \
-    poetry run python -m app.initdb
+RUN poetry install && poetry run python -m app.initdb
 
 RUN rm app/initdb.py
 
