ci(challops): specify keys for deleting

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,36 +81,39 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
           
-      - name: Build challenges
-        run: |
-          IFS=' ' read -r -a challenge_dirs <<< "${{ steps.modified-chalenges.outputs.dirs }}"
-          for challenge_dir in "${challenge_dirs[@]}"; do
-            docker compose -f $challenge_dir/docker-compose.yml build
-          done
+      # - name: Build challenges
+      #   run: |
+      #     IFS=' ' read -r -a challenge_dirs <<< "${{ steps.modified-chalenges.outputs.dirs }}"
+      #     for challenge_dir in "${challenge_dirs[@]}"; do
+      #       docker compose -f $challenge_dir/docker-compose.yml build
+      #     done
       
-      - name: Push challenges
-        run: |
-          IFS=' ' read -r -a challenge_dirs <<< "${{ steps.modified-chalenges.outputs.dirs }}"
-          for challenge_dir in "${challenge_dirs[@]}"; do
-            docker compose -f $challenge_dir/docker-compose.yml push
-          done
+      # - name: Push challenges
+      #   run: |
+      #     IFS=' ' read -r -a challenge_dirs <<< "${{ steps.modified-chalenges.outputs.dirs }}"
+      #     for challenge_dir in "${challenge_dirs[@]}"; do
+      #       docker compose -f $challenge_dir/docker-compose.yml push
+      #     done
   
       - name: Clear cache
         uses: actions/github-script@v6
         with:
           script: |
             console.log("About to clear")
+            const cachesToDelete = ["last-hashes"];
             const caches = await github.rest.actions.getActionsCacheList({
               owner: context.repo.owner,
               repo: context.repo.repo,
             })
             for (const cache of caches.data.actions_caches) {
-              console.log(cache)
-              github.rest.actions.deleteActionsCacheById({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                cache_id: cache.id,
-              })
+              if (predefinedCacheList.includes(cache.name)) {
+                console.log(cache)
+                github.rest.actions.deleteActionsCacheById({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  cache_id: cache.id,
+                })
+              }
             }
             console.log("Clear completed")
       
