--- a/.github/workflows/ctfd.yml
+++ b/.github/workflows/ctfd.yml
@@ -64,32 +64,35 @@ jobs:
       - name: Changed challenges list
         run: echo "${{ steps.modified-chalenges.outputs.dirs }}"
       
-      - name: Challenge Sync
-        id: challenge-sync
-        run: |
-          IFS=' ' read -r -a chall_dirs <<< "${{ steps.modified-chalenges.outputs.dirs }}"
-            for dir in "${chall_dirs[@]}"; do
-                ctf challenge install ${dir}
-                ctf challenge sync ${dir}
-            done
-          echo "dirs=${dirs[*]}" >> "$GITHUB_OUTPUT"
+      # - name: Challenge Sync
+      #   id: challenge-sync
+      #   run: |
+      #     IFS=' ' read -r -a chall_dirs <<< "${{ steps.modified-chalenges.outputs.dirs }}"
+      #       for dir in "${chall_dirs[@]}"; do
+      #           ctf challenge install ${dir}
+      #           ctf challenge sync ${dir}
+      #       done
+      #     echo "dirs=${dirs[*]}" >> "$GITHUB_OUTPUT"
       
       - name: Clear cache
         uses: actions/github-script@v6
         with:
           script: |
             console.log("About to clear")
+            const cachesToDelete = ["ctfd-pipeline-last-hashes"];
             const caches = await github.rest.actions.getActionsCacheList({
               owner: context.repo.owner,
               repo: context.repo.repo,
             })
             for (const cache of caches.data.actions_caches) {
-              console.log(cache)
-              github.rest.actions.deleteActionsCacheById({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                cache_id: cache.id,
-              })
+              if (predefinedCacheList.includes(cache.name)) {
+                console.log(cache)
+                github.rest.actions.deleteActionsCacheById({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  cache_id: cache.id,
+                })
+              }
             }
             console.log("Clear completed")
       
