--- a/.github/workflows/ctfd.yml
+++ b/.github/workflows/ctfd.yml
@@ -85,7 +85,7 @@ jobs:
               repo: context.repo.repo,
             })
             for (const cache of caches.data.actions_caches) {
-              if (predefinedCacheList.includes(cache.name)) {
+              if (cachesToDelete.includes(cache.name)) {
                 console.log(cache)
                 github.rest.actions.deleteActionsCacheById({
                   owner: context.repo.owner,
