ci(challops): fix cache

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,19 +81,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
           
-      # - name: Build challenges
-      #   run: |
-      #     IFS=' ' read -r -a challenge_dirs <<< "${{ steps.modified-chalenges.outputs.dirs }}"
-      #     for challenge_dir in "${challenge_dirs[@]}"; do
-      #       docker compose -f $challenge_dir/docker-compose.yml build
-      #     done
+      - name: Build challenges
+        run: |
+          IFS=' ' read -r -a challenge_dirs <<< "${{ steps.modified-chalenges.outputs.dirs }}"
+          for challenge_dir in "${challenge_dirs[@]}"; do
+            docker compose -f $challenge_dir/docker-compose.yml build
+          done
       
-      # - name: Push challenges
-      #   run: |
-      #     IFS=' ' read -r -a challenge_dirs <<< "${{ steps.modified-chalenges.outputs.dirs }}"
-      #     for challenge_dir in "${challenge_dirs[@]}"; do
-      #       docker compose -f $challenge_dir/docker-compose.yml push
-      #     done
+      - name: Push challenges
+        run: |
+          IFS=' ' read -r -a challenge_dirs <<< "${{ steps.modified-chalenges.outputs.dirs }}"
+          for challenge_dir in "${challenge_dirs[@]}"; do
+            docker compose -f $challenge_dir/docker-compose.yml push
+          done
   
       - name: Clear cache
         uses: actions/github-script@v6
