--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,3 +21,8 @@ jobs:
     uses: ./.github/workflows/ctfd.yml
     needs: build
     secrets: inherit
+
+  readme:
+    uses: ./.github/workflows/readme.yml
+    needs: ctfd
+    secrets: inherit
