--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -29,5 +29,5 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add README.md
+          git add "./*README.md"
           git diff --quiet && git diff --staged --quiet || (echo 'Committing changes...' && git commit -m "[GitHub Action] Update challenges in README.md" && git push)
