--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,7 +106,7 @@ jobs:
               repo: context.repo.repo,
             })
             for (const cache of caches.data.actions_caches) {
-              if (cachesToDelete.includes(cache.name)) {
+              if (cachesToDelete.includes(cache.key)) {
                 console.log(cache)
                 github.rest.actions.deleteActionsCacheById({
                   owner: context.repo.owner,
